# pro-airtable

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  tox.ini
proairtable/: __init__.py  _client.py  _schema.py
proairtable/fields/: __init__.py  base.py  date.py  string.py
tests/: conftest.py  test_schema.py
