[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proairtable"
authors = [
    {name = "Aarshay Jain", email = "aarshay.jain@columbia.edu"},
]
description = "Utility to play with airtable data using python scripts"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["airtable", "pydantic"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=1.9.0,<2",
    "pyairtable>=1.1,<2"
]
dynamic = ["version"]

[project.optional-dependencies]
build = [
    "coverage>=5,<6",
    "pytest>=6,<=7",
    "pytest-cov>=2.5,<3",
    "tox>=3.24,<4",
    "isort>=5.10,<6",
    "python-dotenv",
    "pip-tools",
    "bumpversion"
]
docs = [
    "sphinx==5.3.0",
    "autodocsumm",
    "sphinx_rtd_theme",
    "nbsphinx",
    "sphinx_gallery"
]
notebook = [
    "jupyterlab>=3.1,<4",
    "ipykernel>=6.0,<7",
]

[project.urls]
Documentation = "https://TBD"
Source = "https://github.com/thismlguy/pro-airtable"

[tool.flit.sdist]
include = ["LICENSE"]
